# personal-management

./: Makefile  README.md  docker-compose.yml
fe-personal-management/: Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
fe-personal-management/public/: index.html
fe-personal-management/src/: App.scss  App.tsx  index.scss  index.tsx  layout.scss  layout.tsx
fe-personal-management/src/components/footer/: footer.scss  footer.tsx
fe-personal-management/src/components/header/: header.scss  header.tsx
fe-personal-management/src/pages/distribution/: distribution.scss  distribution.tsx
fe-personal-management/src/pages/expenses/: expenses.scss  expenses.tsx
fe-personal-management/src/pages/home/: home.scss  home.tsx
fe-personal-management/src/pages/income/: income.scss  income.tsx
fe-personal-management/src/pages/savings/: savings.scss  savings.tsx
fe-personal-management/src/pages/users/: users.scss  users.tsx
fe-personal-management/src/services/: pm.service.ts
ms-personal-management/: .env  Dockerfile  pyproject.toml
ms-personal-management/app/: crud.py  database.py  main.py  models.py  schemas.py
ms-personal-management/app/repositories/: distribution_repository.py  expense_repository.py  financial_repository.py  income_repository.py  savings_repository.py  user_repository.py
ms-personal-management/app/routes/: __init__.py  distribution_routes.py  expense_routes.py  financial_routes.py  income_routes.py  savings_routes.py  user_routes.py
scripts/: init_database.sql
