[tool.poetry]
name = "ms-personal-management"
version = "0.1.0"
description = "API para gestión financiera con FastAPI y SQLAlchemy"
authors = ["Tu Nombre <tuemail@example.com>"]

packages = [{include = "app"}] 

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.27"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
